 -- mid(abc,-1,2) now returns a, not ab. mid(abc,1,-2) now returns
    ab, not a.  This is the documented behavior.
 -- wordpos() did not strip ansi before counting characters.
 -- Fix signed / unsigned warning in dump_info() (Issue 276).
 -- Corrected minor typo in @comon section of help.txt. (Issue 275)
 -- Restore newline skipping in wrap(), broken in 2.7.0.2 (Issue 278).
 -- Fix potential buffer overflow in ladd() (Issue 282). Thanks Jake.
 -- Use %p printf format for pointer to avoid compiler warning about
    truncating a potentially 64-bit quantity.
 -- Restore newline skipping in wrap(), broken in 2.7.0.2 (Issue 278).


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~
 -- Help entries use less memory (specific improvements described in
    Issue 238 comments).  Thanks Alierak.
 -- MUNGE() translates results through a hash table instead of
    repeated linear searching (Issue 247).  Thanks Alierak and Ian.
 -- VMAG(), VUNIT, and SHUFFLE() only need LBUF_SIZE/2 elements instead
    of LBUF_SIZE elements.
 -- Prepending a single char to a mux_string no longer copies the
    string twice (Issue 281).
 -- Make mux_exec() not check function names that are too long to be
    valid.
 -- Prepending a single char to a mux_string no longer copies the
    string twice (Issue 281).
 -- Make parse_arglist_lite() and mux_exec() non-destructive.
 -- Make mux_exec() take a char *pdstr instead of char **dstr.


Cosmetic Changes:
~~~~~~~~~~~~~~~~
 -- Added Doxygen file headers (Issue 102).


Miscellaneous:
~~~~~~~~~~~~~
 -- Documented Lbufref and Regref pools in 'wizhelp @list alloc'.
    Thanks Alierak.
 -- Documented use of a single backslash as a proper shortcut to
    @emit (Issue 219).  Thanks Alierak.
 -- Removed unnecessary global pos variable from help.cpp (Issue 265).
 -- Fixed dangling reference to 'help @version' (Issue 277).
 -- Corrected documentation of E() and PI() to reflect actual precision
    (Issue 283).  Thanks Jake.