@@ -62,6 +62,13 @@ Bug Fixes:
  -- Use %p printf format for pointer to avoid compiler warning about
     truncating a potentially 64-bit quantity.
  -- Restore newline skipping in wrap(), broken in 2.7.0.2 (Issue 278).
+ -- Fix line-duplication bug in wrap(), broken in 2.7.0.2 (Issue 286).
+ -- Fix tab expansion in wrap().
+ -- Fixed memory leak in scheduler because of running out of memory.
+ -- Fixed non-player object's ability to hold coins.
+ -- Fixed loading of coins from flatfile (i.e., across @restart for
+    memory-based) (Issue 224).
+ -- Fix Firan build break in fun_trigger() (Issue 288).
 
 
 Performance Enhancements:
